--- a/csirt.divd.nl/cases/DIVD-2021-00014.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00014.md
@@ -12,6 +12,7 @@ excerpt: Users of on-premise Kaseya Unitrends are advised to not expose this ser
 researchers:
 - Wietse Boonstra
 - Victor Gevers
+- Frank Breedijk
 cves: n/a
 product: Kaseya Unitrends
 versions: 
