Added CVE numbers tot he case

--- a/csirt.divd.nl/cases/DIVD-2021-00014.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00014.md
@@ -23,17 +23,20 @@ Do not expose this service or the clients directly to the internet until Kaseya 
 "
 patch_status:	 	"Server side vulnerabilities patched in v10.5.5-2, no patches available for the client"
 workaround:		Workaround available for the client, in Kaseya knowledge base
+jekyll-secinfo:
+  cve:
+    url: /cves/CVE-
 ---
 
 ## Summary
 A DIVD researcher has identified three vulnerabilities in the [Kaseya Unitrends](https://www.unitrends.com/products/enterprise-backup-software) backup product.
 
 Server software prior to v10.5.5-2 is vulnerable to:
-* An authenticated remote code execution vulnerability, and
-* a privilege escaltion vulnerability from read-only user to admin 
+* {% cve CVE-2021-40385 %}, a privilege escaltion vulnerability from read-only user to admin, and
+* {% cve CVE-2021-40387 %}, an authenticated remote code execution vulnerability
 
 Client software (any version) is currently vulnerable to: 
-* a (yet) undisclosed vulnerability on the client
+* {% cve CVE-2021-40386 %}, a (yet) upatched and undisclosed vulnerability on the client
 
 
 ## What you can do
@@ -48,8 +51,9 @@ The Dutch Institute for Vulnerability Disclosure (DIVD) performs a daily scan to
 
 | Date  | Description |
 |:-----:|-------------|
-| 02 July 2021 | Vulnerabilities discovered. |
-| 03 July 2021 | Vendor informed. |
-| 14 July 2021 | Scanning internet-facing implementations. |
-| 15 July 2021 | Start of the identification of possible vulnerable internet-facing systems. |
-| 12 August 2021 | Patches relesed for the Unitrends server (v10.5.5-2) that address these vulnerabilities |
+| 02 Jul 2021 | Vulnerabilities discovered. |
+| 03 Jul 2021 | Vendor informed. |
+| 14 Jul 2021 | Scanning internet-facing implementations. |
+| 15 Jul 2021 | Start of the identification of possible vulnerable internet-facing systems. |
+| 12 Aug 2021 | Patches relesed for the Unitrends server (v10.5.5-2) that address these vulnerabilities |
+| 06 Sep 2021 | Added official CVE numbers to this case and site |
