--- a/csirt.divd.nl/cases/DIVD-2021-00027.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00027.md
@@ -25,7 +25,7 @@ patch_status:	 	Full patched
 ---
 ## Summary
 
-Apache HTTP Server project version 2.4.49 has a vulnerability in their path normalization which allows an attacker to map URLs to files outside the document root by launching a path traversal and file disclosure.
+Apache HTTP Server project version 2.4.49 has a vulnerability in their path normalization which allows an attacker to map URLs to files outside the document root by launching a path traversal and file disclosure. As there has been evidence of exploitation in the wild we advice to patch with high priority. 
 
 ## What you can do
 
@@ -39,7 +39,7 @@ We are actively scanning for vulnerable machines on the internet.
 
 | Date | Description |
 |:-----:|-------------|
-| 29 Sept 2021 | {% cve CVE-2021-41773 %} Reported by the security team. |
+| 29 Sept 2021 | {% cve CVE-2021-41773 %} Reported by the ASF security team. |
 | 04 Okt 2021 | {% cve CVE-2021-41773 %} patched and documented |
 | 05 Okt 2021 | First version of this case file  |
 | 05 Okt 2021 | DIVD is actively scanning for vulnerable servers. |
