--- a/csirt.divd.nl/cases/DIVD-2021-00027.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00027.md
@@ -25,7 +25,7 @@ patch_status:	 	Full patched
 ---
 ## Summary
 
-Apache HTTP Server project version 2.4.49 has a vulnerability in their path normalization which allows an attacker to map URLs to files outside the document root by launching a path traversal and file disclosure. As there has been evidence of exploitation in the wild we advice to patch with high priority. 
+Apache HTTP Server project version 2.4.49 has a vulnerability in their path normalization which allows an attacker to map URLs to files outside the document root by launching a path traversal and file disclosure. As there has been evidence of exploitation in the wild we advice to patch with high priority.
 
 ## What you can do
 
@@ -48,3 +48,4 @@ We are actively scanning for vulnerable machines on the internet.
 * [Path Traversal Zero-Day in Apache HTTP Server Exploited](https://www.tenable.com/blog/cve-2021-41773-path-traversal-zero-day-in-apache-http-server-exploited)
 * [Apache 2.4.50 Release Notes](https://downloads.apache.org/httpd/CHANGES_2.4.50)
 * [Apache fixes actively exploited web server zero-day](https://therecord.media/apache-fixes-actively-exploited-web-server-zero-day/)
+* [NCSC Advisory NCSC-2021-0861](https://advisories.ncsc.nl/advisory?id=NCSC-2021-0861)
