include new apache version for DIVD-2021-00027

--- a/csirt.divd.nl/cases/DIVD-2021-00027.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00027.md
@@ -29,7 +29,7 @@ Apache HTTP Server project version 2.4.49 has a vulnerability in their path norm
 
 ## What you can do
 
-If you run Apache HTTP server version 2.4.49, downgrade to 2.4.48 or upgrade to 2.4.50.
+If you run Apache HTTP server version 2.4.49/2.4.50, downgrade to 2.4.48 or upgrade to 2.4.51.
 
 ## What we are doing
 
@@ -43,6 +43,7 @@ We are actively scanning for vulnerable machines on the internet.
 | 04 Okt 2021 | {% cve CVE-2021-41773 %} patched and documented |
 | 05 Okt 2021 | First version of this case file  |
 | 05 Okt 2021 | DIVD is actively scanning for vulnerable servers. |
+| 07 Okt 2021 | Apache 2.51 released to mitigate {% cve CVE-2021-41773 %} |
 
 ## More information
 * [Path Traversal Zero-Day in Apache HTTP Server Exploited](https://www.tenable.com/blog/cve-2021-41773-path-traversal-zero-day-in-apache-http-server-exploited)
