update divd-2021-00027 with feedback

--- a/csirt.divd.nl/cases/DIVD-2021-00027.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00027.md
@@ -17,15 +17,16 @@ researchers:
 cves:
 - CVE-2021-41773
 product: Apache HTTP Server
-versions: 2.4.49
+versions: 2.4.49/2.4.50
 recommendation: "
-Upgrade to 2.4.50"
+Upgrade to 2.4.51"
 patch_status:	 	Full patched
 -workaround:		n/a
 ---
 ## Summary
 
-Apache HTTP Server project version 2.4.49 has a vulnerability in their path normalization which allows an attacker to map URLs to files outside the document root by launching a path traversal and file disclosure. As there has been evidence of exploitation in the wild we advice to patch with high priority.
+Apache HTTP Server project version 2.4.49 has a vulnerability in their path normalization which allows an attacker to map URLs to files outside the document root by launching a path traversal and file disclosure. The vulnerability can also  be bypassed in apache 2.4.50. As there has been evidence of exploitation in the wild we advice to patch with high priority.
+
 
 ## What you can do
 
@@ -50,3 +51,5 @@ We are actively scanning for vulnerable machines on the internet.
 * [Apache 2.4.50 Release Notes](https://downloads.apache.org/httpd/CHANGES_2.4.50)
 * [Apache fixes actively exploited web server zero-day](https://therecord.media/apache-fixes-actively-exploited-web-server-zero-day/)
 * [NCSC Advisory NCSC-2021-0861](https://advisories.ncsc.nl/advisory?id=NCSC-2021-0861)
+
+Tday we learned that the patches made by apache in 2.4.50 can be bypassed, we have updated our casefile to tell that a mitigation is either to downgrade to 2.4.48 or to upgrade to 2.4.51.
