Removed some trailing whitespaces and fixed a typo

--- a/csirt.divd.nl/cases/DIVD-2021-00022.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00022.md
@@ -2,7 +2,7 @@
 layout: case
 title: DIVD-2021-00022 - Exchange ProxyShell and ProxyOracle
 divd: DIVD-2021-00022
-short: New vulnerabilities in Microsoft Exchange 
+short: New vulnerabilities in Microsoft Exchange
 author: Frank Breedijk
 lead: Frank Breedijk
 redirect_from:
@@ -12,7 +12,7 @@ excerpt: We will be scanning for the vulnerabilities related to the ProxyShell a
 researchers:
 - Victor Pasman
 - Lennaert Oudshoorn
-cves: 
+cves:
 - CVE-2021-34473
 - CVE-2021-34523
 - CVE-2021-31207
@@ -29,14 +29,14 @@ patch_status:	 	Full patched
 
 Microsoft Exchange has a number of vulnerabilities that allow a lot of opportunity for attack. Two of these attacks are ProxyShell, which allows Remote Code Execution and ProxyOracle which allows the recovery of the plain text password of a user by tricking them to click a single link.
 
-We noticed that even tough patches have been released in April and July, there are still a lot of Exchange servers online without the patches. 
+We noticed that even tough patches have been released in April and July, there are still a lot of Exchange servers online without the patches.
 
 ## What you can do
 
 If you run your own Exchange server, make sure it is patched:
-* Exchange Serer 2019 as least Cumulative update 9 or 10
-* Exchange Serer 2016 as least Cumulative update 20 or 21
-* Exchange Serer 2013 as least Cumulative update 23
+* Exchange Server 2019 as least Cumulative update 9 or 10
+* Exchange Server 2016 as least Cumulative update 20 or 21
+* Exchange Server 2013 as least Cumulative update 23
 
 If you are having trouble getting your Exchange server patched, we suggest that it might we worthwhile to look into Office 365.
 
@@ -54,6 +54,6 @@ We have made an [NSE script for ProxyOracle](https://github.com/DIVD-NL/ProxyOra
 | 30 Aug 2021 | First version of this case file |
 | 30 Aug 2021 | DIVD releases [scan script](https://github.com/DIVD-NL/ProxyOracleNSE) for {% cve CVE-2021-31195 %} |
 
-## More information 
+## More information
 * [A New Attack Surface on MS Exchange Part 2 - ProxyOracle! by DevCore](https://devco.re/blog/2021/08/06/a-new-attack-surface-on-MS-exchange-part-2-ProxyOracle/)
 * [ProxyShell vulnerabilities and your Exchange Server by the Microsoft Exchange Team](https://techcommunity.microsoft.com/t5/exchange-team-blog/proxyshell-vulnerabilities-and-your-exchange-server/ba-p/2684705)
