--- a/csirt.divd.nl/cases/DIVD-2021-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00001.md
@@ -55,17 +55,17 @@ Aan de hand van deze scan resultaten zullen wij de beheerders van deze systemen 
 
 | Date  | Description |
 |:-----:|-------------|
-| 06-01-2021 | Volexity detecteerd abnormale activiteit op twee van haar klanten hun Microsoft Exchange Servers |
+| 06-01-2021 | Volexity detecteert abnormale activiteit op twee van haar klanten hun Microsoft Exchange Servers |
 | 02-03-2021 | Microsoft publiceert security blog and patches |
 | 02-03-2021 | Volexity publiceert Blog |
 | 03-03-2021 | Onderzoekers van DIVD scannen "Nederlandse" exchange servers met deze kwetsbaarheden |
 | 03-03-2021 | Start scannen rest van IPv4 space |
 | 04-03-2021 | "Nederland" lijst naar NBIP gestuurd voor verder notificaties |
 | 04-03-2021 | Scan rest van IPv4 space klaar |
-| 07-03-2021 | 42k+ messsages verstuurd via email |
-| 09-03-2021 | Herscan en notificatie van all servers die voorheen ook gescand zijn |
+| 07-03-2021 | 42k+ messsages verstuurd via e-mail |
+| 09-03-2021 | Herscan en notificatie van alle servers die voorheen ook gescand zijn |
 | 16-03-2021 | Herscan en notificatie van alle servers inclusief script die daadwerkelijk {% cve CVE-2021-26855 %} test |
-| 15-5-2021  | Case gesloten voor CSIRT en overgedragen aan afdeling onderzoek. Zie [blogpost](/2021/05/14/Closing-ProxyLogon-case/)
+| 15-05-2021 | Case gesloten voor CSIRT en overgedragen aan afdeling onderzoek. Zie [blogpost](/2021/05/14/Closing-ProxyLogon-case/)
 
 ## Meer informatie
 * [Microsoft Security Blog](https://www.microsoft.com/security/blog/2021/03/02/hafnium-targeting-exchange-servers/)
