Fix link to personal teampage of Barry

--- a/csirt.divd.nl/cases/DIVD-2020-00003.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00003.md
@@ -30,7 +30,7 @@ workaround:		Superceeded by patches
 {% assign team = site.team | map: "name" -%}
 {% assign lead = page.lead | default: page.author -%}
 {% if team contains lead -%}
-| Case lead | [{{ lead }}](https://www.divd.nl/team/{{ lead }}.md) |
+| Case lead | [{{ lead }}](https://www.divd.nl/team/{{ lead }}) |
 {% else -%}
 | Case lead | {{ lead }} |
 {% endif -%}
