--- a/csirt.divd.nl/cases/DIVD-2021-00030.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00030.md
@@ -32,7 +32,7 @@ If you run GitLab CE/EE version starting from 11.9, upgraded to the latest versi
 
 ## What we are doing
 
-We are actively scanning for vulnerable machines on the internet.
+We are processing the list of vulnerable gitlab servers.
 
 ## Timeline
 
