--- a/csirt.divd.nl/cases/DIVD-2021-00030.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00030.md
@@ -28,7 +28,7 @@ An issue has been discovered in GitLab CE/EE affecting all versions starting fro
 
 ## What you can do
 
-If you run GitLab CE/EE version starting from 11.9, upgraded to the latest version as soon as possible.
+If you run GitLab CE/EE version starting from 11.9, upgrade to the latest version as soon as possible.
 
 ## What we are doing
 
