--- a/csirt.divd.nl/cases/DIVD-2020-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00001.md
@@ -122,12 +122,12 @@ The number of vulnerable systems is decreasing
 | 17-12-2019 | [Citrix reports](https://support.citrix.com/article/CTX267027) a vulnerability in Citrix ADC and advices to [implement mitigation](https://support.citrix.com/article/CTX267679).
 | 9-1-2019   | Researchers report attackers are actively searching for vulnerable systems. |
 | 11-1-2020  | Exploit code is publicly available, e.g. the [Project Zero Day India](https://github.com/projectzeroindia/CVE-2019-19781) and [Trusted Sec](https://github.com/trustedsec/cve-2019-19781) |
-| 13-1-2020  | [The Dutch Security Hotline](https://www.securitymeldpunt.nl/english/) has been activated |
-| 14-1-2020  | First notifications have been sent out by the [The Dutch Security Hotline](https://www.securitymeldpunt.nl/english/) |
+| 13-1-2020  | [The Dutch Security Hotline](https://www.securitymeldpunt.nl/) has been activated |
+| 14-1-2020  | First notifications have been sent out by the [The Dutch Security Hotline](https://www.securitymeldpunt.nl/) |
 | 15-1-2020  | [Blog post](/2020/01/15/How-to-check-your-Citrix-gateway/) with links to articles on how to establish whether a ADC is compromised |
 | 16-1-2020  | The Dutch National Cyber Security Center, [NCSC](https://www.ncsc.nl), reports mitigation measures prove unreliable and advices to consider to [shut down Citrix ADC systems](https://www.ncsc.nl/actueel/nieuws/2020/januari/16/door-citrix-geadviseerde-mitigerende-maatregelen-niet-altijd-effectief). The Dutch Security Hotline decides to temporarily stop scanning and reporting.  |
-| 17-1-2020  | The NCSC Het NCSC clarifies its 16-1 statement: "Shut down Citrix systems if possible or take additional measures". <br> The Dutch Security Hotline continues its scanning and reporting activities. |
-| 19-1-2020  | [Patches avaiable](https://www.citrix.com/blogs/2020/01/19/vulnerability-update-first-permanent-fixes-available-timeline-accelerated/) for version 11.1 and 12.0. This is one day sooner then initially communicated. The date for which patches for version 12.1 and 13 are availbe has changed from 27-1 to 24-1. The date that patches are aviable for version 10 has been changed from 31-1 to 24-1. |
+| 17-1-2020  | The NCSC clarifies its 16-1 statement: "Shut down Citrix systems if possible or take additional measures". <br> The Dutch Security Hotline continues its scanning and reporting activities. |
+| 19-1-2020  | [Patches avaiable](https://www.citrix.com/blogs/2020/01/19/vulnerability-update-first-permanent-fixes-available-timeline-accelerated/) for version 11.1 and 12.0. This is one day sooner then initially communicated. The date for which patches for version 12.1 and 13 are available has changed from 27-1 to 24-1. The date that patches are available for version 10 has been changed from 31-1 to 24-1. |
 | 24-1-2020  | Citrix expect to have patches available for version 10, 12.1 and 13 of ADC and SD-WAN WANOP |
 | 24-1-2020  | Citrix deploys the final patches for [all versions](https://www.citrix.com/blogs/2020/01/24/citrix-releases-final-fixes-for-cve-2019-19781/). Also an Indicator of Compromise Scanning tool has been released to [test possible exploitation](https://www.citrix.com/blogs/2020/01/22/citrix-and-fireeye-mandiant-share-forensic-tool-for-cve-2019-19781/) |
 | 9-3-2020 | Case Closed | 
