Aanpassingen ivm juiste versienummers

--- a/csirt.divd.nl/cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00006.md
@@ -17,9 +17,10 @@ cves:
 - CVE-2021-32233
 - CVE-2021-32234
 
-versions: "
-	SmarterMail 100.0.7776.14290 (Apr 16, 2021)
-"
+versions: 
+  - SmarterMail 16.x
+	- SmarterMail before 100.0.7803 (May 13, 2021)
+
 recommendation: "
   Upgrade to SmarterMail Build 7957 (Oct 14, 2021)
 "
@@ -31,11 +32,11 @@ One of our researchers found multiple vulnerabilities in SmarterMail, which we w
 
 ## The vulnerabilities
 We notified SmarterTools Inc. of the following vulnerabilities:
-* [CVE-2021-32233](https://csirt.divd.nl/cves/CVE-2021-32233) - SmarterTools SmarterMail before Build 7776 allows XSS.
-* [CVE-2021-32234](https://csirt.divd.nl/cves/CVE-2021-32234) - SmarterTools SmarterMail before Build 7776 allows Remote Code Execution.
+* [CVE-2021-32233](https://csirt.divd.nl/cves/CVE-2021-32233) - SmarterTools SmarterMail before 100.0.7803 (May 13, 2021) and 16.x allows XSS.
+* [CVE-2021-32234](https://csirt.divd.nl/cves/CVE-2021-32234) - SmarterTools SmarterMail before 100.0.7803 (May 13, 2021) and 16.x allows Remote Code Execution.
 
 ## What you can do
-If you run a version of SmarterMail before Build 7776, upgrade to the latest version as soon as possible. To verify if your SmarterMail installation is vulnerable, go within the SmarterMail portal to /about/checkup and verify the version number. If the version number is 100.0.7793 (May 3, 2021) or less and you are running SmarterMail version 16.x, then your vulnerable for these vulnerabilities.
+If you are running a version of SmarterMail before 100.0.7803 (May 13, 2021) or 16.x, upgrade to the latest version as soon as possible. To verify the installed version, go within the SmarterMail portal to /about/checkup (http(s)://yourwebmailurl.ext/about/checkup) and verify the version number. If the version number is 16.x or before 100.0.7803 (May 13, 2021) then you are vulnerable.
 
 ## What we are doing
 We are processing the list of vulnerable SmarterMail servers.
@@ -44,11 +45,14 @@ We are processing the list of vulnerable SmarterMail servers.
 
 | Date | Description |
 |:-------------:|-----|
-| 30 Apr 2021 | Vender contacted and informed. |
+| 30 Apr 2021 | Vendor contacted and informed. |
 | 30 Apr 2021 | Scanning internet-facing implementations. |
 | 30 Apr 2021 | Start of the identification of possible victims (with internet-facing systems). |
+| 03 May 2021 | Contacted vendor if email was received. Resend information to vendor. |
+| 10 May 2021 | Vendor responds that they are working on it.|
+| 24 May 2021 | Requested an update.|
+| 01 Jun 2021 | Vendor issues patch(es). |
 | 16 Nov 2021 | First version of this case file. |
-| 00 00 2021 | Vendor issues patch(es). |
 | 00 00 2021 | DIVD CSIRT starts to inform identified owners with internet-facing systems. |
 | 00 00 2021  | Publication (after 3 months). |
 
