fix for summary

--- a/csirt.divd.nl/cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00006.md
@@ -10,9 +10,7 @@ redirect_from:
 status: Open
 researchers:
 - Wietse Boonstra
-product: "
-	SmarterMail
-"
+product: Smartertools SmarterMail
 cves:
 - CVE-2021-32233
 - CVE-2021-32234
@@ -25,7 +23,7 @@ recommendation: "
   Upgrade to SmarterMail Build 7957 (Oct 14, 2021)
 "
 patch_status: Full patched
--workaround: N/A
+workaround: N/A
 ---
 ## Summary
 One of our researchers found multiple vulnerabilities in SmarterMail, which we were in the process of responsible disclosure (or Coordinated Vulnerability Disclosure) with SmarterTools Inc. Both vulnerabilities were discovered within the webmail fronted of SmarterMail. 
