--- a/csirt.divd.nl/cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00006.md
@@ -2,28 +2,26 @@
 layout: case
 title: DIVD-2021-00006 - SmarterMail
 divd: DIVD-2021-00006
-short: "Multiple vulnerabilities discovered in SmarterMail."
+short: Multiple vulnerabilities discovered in SmarterMail.
 author: Victor Pasman
 lead: Lennaert Oudshoorn
 redirect_from:
   - /DIVD-2021-00006/
 status: Open
 researchers:
-- Wietse Boonstra
+  - Wietse Boonstra
 product: Smartertools SmarterMail
 cves:
-- CVE-2021-32233
-- CVE-2021-32234
-
+  - CVE-2021-32233
+  - CVE-2021-32234
 versions: 
-  - SmarterMail 16.x
-	- SmarterMail before 100.0.7803 (May 13, 2021)
-
+- SmarterMail 16.x
+- SmarterMail before 100.0.7803 (May 13, 2021)
 recommendation: "
   Upgrade to SmarterMail Build 7957 (Oct 14, 2021)
 "
 patch_status: Full patched
-workaround: N/A
+-workaround: N/A
 ---
 ## Summary
 One of our researchers found multiple vulnerabilities in SmarterMail, which we were in the process of responsible disclosure (or Coordinated Vulnerability Disclosure) with SmarterTools Inc. Both vulnerabilities were discovered within the webmail fronted of SmarterMail. 
