--- a/csirt.divd.nl/cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00006.md
@@ -8,6 +8,7 @@ lead: Lennaert Oudshoorn
 redirect_from:
   - /DIVD-2021-00006/
 status: Open
+excerpt: Multiple vulnerabilities discovered in all versions of 16.x of Smartertools SmarterMail and all versions before 100.0.7803 (May 13, 2021)
 researchers:
   - Wietse Boonstra
 product: Smartertools SmarterMail
@@ -15,7 +16,7 @@ cves:
   - CVE-2021-32233
   - CVE-2021-32234
 versions: 
-- SmarterMail 16.x
+- SmarterMail 16.x All versions
 - SmarterMail before 100.0.7803 (May 13, 2021)
 recommendation: "
   Upgrade to SmarterMail Build 7957 (Oct 14, 2021)
