--- a/csirt.divd.nl/cases/DIVD-2021-00030.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00030.md
@@ -32,7 +32,7 @@ If you run GitLab CE/EE version starting from 11.9, upgrade to the latest versio
 
 ## What we are doing
 
-We are processing the list of vulnerable gitlab servers.
+We are processing the list of vulnerable gitlab servers. We have sent the first notifications by email. 
 
 ## Timeline
 
@@ -42,6 +42,8 @@ We are processing the list of vulnerable gitlab servers.
 | 29 Okt 2021 | POC released on Gitlab  |
 | 10 Nov 2021 | DIVD got a list of vulnerable gitlab servers |
 | 11 Nov 2021 | First version of this case file  |
+| 13 Nov 2021 | Validating the received data |
+| 15 Nov 2021 | First notifications sent out |
 
 ## More information
 * [GitLab Critical Security Release: 13.10.3, 13.9.6, and 13.8.8](https://about.gitlab.com/releases/2021/04/14/security-release-gitlab-13-10-3-released/#Remote-code-execution-when-uploading-specially-crafted-image-files)
