--- a/csirt.divd.nl/cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00006.md
@@ -15,6 +15,7 @@ product: Smartertools SmarterMail
 cves:
   - CVE-2021-32233
   - CVE-2021-32234
+  - CVE-2021-43977
 versions: 
 - SmarterMail 16.x All versions
 - SmarterMail before 100.0.7803 (May 13, 2021)
@@ -29,6 +30,7 @@ One of our researchers found multiple vulnerabilities in SmarterMail, which we w
 
 ## The vulnerabilities
 We notified SmarterTools Inc. of the following vulnerabilities:
+* [CVE-2021-43977](https://csirt.divd.nl/cves/CVE-2021-43977) - SmarterTools SmarterMail before 100.0.7803 (May 13, 2021) and 16.x allows XSS.
 * [CVE-2021-32233](https://csirt.divd.nl/cves/CVE-2021-32233) - SmarterTools SmarterMail before 100.0.7803 (May 13, 2021) and 16.x allows XSS.
 * [CVE-2021-32234](https://csirt.divd.nl/cves/CVE-2021-32234) - SmarterTools SmarterMail before 100.0.7803 (May 13, 2021) and 16.x allows Remote Code Execution.
 
