--- a/csirt.divd.nl/cases/DIVD-2021-00030.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00030.md
@@ -44,7 +44,8 @@ We are processing the list of vulnerable gitlab servers. We have sent the first 
 | 11 Nov 2021 | First version of this case file  |
 | 13 Nov 2021 | Validating the received data |
 | 15 Nov 2021 | First notifications sent out |
-| 19 Nov 2021 | Report is being written |
+| 23 Nov 2021 | DIVD got a second list with vulnerable gitlab servers |
+| 23 Nov 2021 | Validating the second received data |
 
 ## More information
 * [GitLab Critical Security Release: 13.10.3, 13.9.6, and 13.8.8](https://about.gitlab.com/releases/2021/04/14/security-release-gitlab-13-10-3-released/#Remote-code-execution-when-uploading-specially-crafted-image-files)
