--- a/csirt.divd.nl/cases/DIVD-2021-00010.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00010.md
@@ -7,7 +7,7 @@ author: Hidde Smit
 lead: Victor Gevers
 redirect_from:
   - /DIVD-2021-00010/
-status : Open
+status : Closed
 excerpt: A critical vulnerability has been found in VMware vCenter Server versions 3.x, 4.x, 6.5, 6.7 and 7.0.
 researchers:
 - Lennaert Oudshoorn
@@ -56,6 +56,7 @@ DIVD sends notifications about the vCenter vulnerability to system owners, for w
 | 31-05-2021 | DIVD starts scanning. |
 | 03-06-2021 | Exploit code published online. |
 | 06-06-2021 | Notifications sent by DIVD CSIRT. |
+| 30-11-2021 | Case closed as the amount of vulnerable systems online has decreased significantly. |
 
 ## References
 [0] https://www.vmware.com/security/advisories/VMSA-2021-0010.html
