--- a/csirt.divd.nl/cases/DIVD-2021-00026.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00026.md
@@ -36,7 +36,7 @@ We recommend you to update your Linux servers running Microsoft Open Management 
 ## What we are doing
 
 We have tried scanning for vulnerable servers running Microsoft Open Management Interface (OMI). We found that:
-- The number of internet facing OMI instances is quite low
+- The number of internet-facing OMI instances is quite low
 - None of these instances actually seems to be exploitable
 
 We have discussed and confirmed these conclusions with the researchers from Wiz, nonetheless, we still think that OMIGOD is a significant security risk. It offers attackers substantial opportunity to move laterally and escalate privileges when they have compromised a host in the network. Also companies may be running this service without their knowledge, because it’s installed by default when using certain Azure services even on hosts not running inside the Azure cloud platform. Though, due to the limited internet exposure of OMI servers, we cannot work on this case any longer.
