--- a/csirt.divd.nl/cases/DIVD-2021-00026.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00026.md
@@ -26,7 +26,7 @@ patch_status:	 	patch available
 
 ## Summary
 
-Microsoft’s Open Management Interface (OMI) for Linux servers which is shipped with Azure, LogAnalytics, Microsoft SystemCenter when using it to manage Linux servers, and potentially more software and services; had a critical vulnerability that made it possible to execute code remotely. We have tried to scan for this vulnerability, however the amount of internet-facing OMI instances is quite low and none of them seemed vulnerable to OMIGOD.
+Microsoft’s Open Management Interface (OMI) for Linux servers can be installed standalone but is mostly shipped, installed, and activated with Azure services such as LogAnalytics, Microsoft SystemCenter and potentially with more software and services. OMI had a critical vulnerability that made it possible to bypass authentication and thus execute code remotely. We have tried to scan for this vulnerability. However, the amount of internet-facing OMI instances is relatively low and none of them seemed vulnerable to OMIGOD.
 
 ## What you can do
 
