--- a/csirt.divd.nl/cases/DIVD-2021-00026.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00026.md
@@ -30,7 +30,7 @@ Microsoft’s Open Management Interface (OMI) for Linux servers can be installed
 
 ## What you can do
 
-We recommend you to update your Linux servers running Microsoft Open Management Interface (OMI) to version 1.13.40-0 or later as the specific vulnerability was patched in this version.
+We recommend you to update your Linux servers running Microsoft Open Management Interface (OMI) to version 1.13.40-0 or later as the specific vulnerability was patched in this version, additionally we recommend that you disable the OMI service if you yourself are not actively using it.
 
 
 ## What we are doing
