--- a/csirt.divd.nl/cases/DIVD-2021-00026.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00026.md
@@ -19,7 +19,7 @@ cves:
 product: Microsoft Open Management Infrastructure (OMI)
 versions: <1.13.40-0
 recommendation: "
-Upgrade to 1.13.40-0 or later"
+Upgrade to OMI version 1.13.40-0 or later and disable the OMI service"
 patch_status:	 	patch available
 -workaround:		n/a
 ---
