--- a/csirt.divd.nl/cases/DIVD-2021-00030.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00030.md
@@ -46,6 +46,7 @@ We are processing the list of vulnerable gitlab servers. We have sent the first 
 | 15 Nov 2021 | First notifications sent out |
 | 23 Nov 2021 | DIVD got a second list with vulnerable gitlab servers |
 | 23 Nov 2021 | Validating the second received data |
+| 24 Nov 2021 | DIVD sent out a second batch of notifications |
 
 ## More information
 * [GitLab Critical Security Release: 13.10.3, 13.9.6, and 13.8.8](https://about.gitlab.com/releases/2021/04/14/security-release-gitlab-13-10-3-released/#Remote-code-execution-when-uploading-specially-crafted-image-files)
