Closing calse DIVD-2021-00027

--- a/csirt.divd.nl/cases/DIVD-2021-00027.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00027.md
@@ -7,7 +7,7 @@ author: Diego Klinkhamer
 lead: Ralph Horn
 redirect_from:
   - /DIVD-2021-00027/
-status : Open
+status : Closed
 excerpt: We will be scanning for CVE-2021-41773
 researchers:
 - Frank Breedijk
@@ -44,7 +44,14 @@ We are actively scanning for vulnerable machines on the internet.
 | 04 Okt 2021 | {% cve CVE-2021-41773 %} patched and documented |
 | 05 Okt 2021 | First version of this case file  |
 | 05 Okt 2021 | DIVD is actively scanning for vulnerable servers. |
+| 06 Okt 2021 | First round of notifications sent about 10269 vulnerable hosts |
 | 07 Okt 2021 | Apache 2.51 released to mitigate {% cve CVE-2021-41773 %} |
+| 26 Okt 2021 | Rescanned the internet. Second round of notifications sent about 6945 vulnerable hosts |
+| 1 Dec 2021 | Based on final scan, 158 vulnerable hosts have been identified. Notifcations sent |
+| 1 Dec 2021 | Case closed |
+
+![Graph showing vulnerable hosts over time](/assets/images/apache-2.4.49-2.4.50.png)
+
 
 ## More information
 * [Path Traversal Zero-Day in Apache HTTP Server Exploited](https://www.tenable.com/blog/cve-2021-41773-path-traversal-zero-day-in-apache-http-server-exploited)
