--- a/csirt.divd.nl/cases/DIVD-2021-00026.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00026.md
@@ -1,8 +1,8 @@
 ---
 layout: case
-title: DIVD-2021-00026 - Omigod: Microsoft Open Management Interface RCE
+title: "DIVD-2021-00026 - Omigod: Microsoft Open Management Interface RCE"
 divd: DIVD-2021-00026
-short: Omigod: vulnerabilities make it possible to execute remote code via Microsoft Open Management Interface (OMI) this service is installed automatically on machines running certain Azure services (either on premise or in the cloud)
+short: Omigod vulnerabilities make it possible to execute remote code via Microsoft Open Management Interface (OMI) this service is installed automatically on machines running certain Azure services (either on premise or in the cloud)
 author: Célistine Oosting
 lead: Frank Breedijk
 redirect_from:
