--- a/csirt.divd.nl/cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00006.md
@@ -52,6 +52,7 @@ We are processing the list of vulnerable SmarterMail servers.
 | 24 May 2021 | Requested an update.|
 | 01 Jun 2021 | Vendor issues patch(es). |
 | 16 Nov 2021 | First version of this case file. |
+| 02 Dec 2021 | First notifications sent out. |
 
 ## More information
 * [official  release notes](https://www.smartertools.com/smartermail/release-notes/current) from SmarterMail
