--- a/csirt.divd.nl/cases/DIVD-2021-00036.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00036.md
@@ -16,7 +16,7 @@ cves:
 product: VMware vCenter Server, Cloud Foundation(vCenter Server)
 versions: vCenter Server 6.5 and 6.7, Cloud Foundation (vCenter Server) 3.x
 recommendation: "
-Upgrade VMware vCenter Server to the latest version"
+Upgrade VMware vCenter Server and VMware Cloud Foundation to the latest version"
 patch_status:	 	Full patched
 -workaround:		n/a
 ---
