--- a/csirt.divd.nl/cases/DIVD-2021-00036.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00036.md
@@ -40,6 +40,7 @@ We are scanning the internet for vulnerable servers, and will notify system owne
 | 24-11-2021 | US Cybersecurity and Infrastructure Security Agency publishes a security advisory. |
 | 03-12-2021 | Proof of Concept code becomes publicly available. |
 | 03-12-2021 | DIVD starts scanning the internet for CVE-2021-21980. |
+| 05-12-2021 | DIVD CSIRT sends mail to owners of vulnerable systems that were found. |
 
 ## More information
 * [VMware  Security Advisory](https://www.vmware.com/security/advisories/VMSA-2021-0027.html)
