Fixing an error in this case

--- a/csirt.divd.nl/_cases/DIVD-2021-00026.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00026.md
@@ -8,7 +8,7 @@ lead: Frank Breedijk
 redirect_from:
   - /DIVD-2021-00026/
 status : Closed
-excerpt:
+excerpt: Omigod vulnerabilities make it possible to execute remote code via Microsoft Open Management Interface (OMI) this service is installed automatically on machines running certain Azure services (either on premise or in the cloud)
 researchers:
 - Frank Breedijk
 - Wietse Boonstra
