--- a/csirt.divd.nl/_cases/DIVD-2021-00038.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00038.md
@@ -1,12 +1,12 @@
 ---
 layout: case
-title: DIVD-2021-00037 - Apache Log4j2
-divd: DIVD-2021-00037
+title: DIVD-2021-00038 - Apache Log4j2
+divd: DIVD-2021-00038
 short: Apache Log4j2 - CVE-2021-44228.
 author: Victor Pasman
 lead: Victor Pasman
 redirect_from:
-  - /DIVD-2021-00037/
+  - /DIVD-2021-00038/
 status : Open
 excerpt: We will be scanning for CVE-2021-44228
 researchers:
@@ -15,7 +15,7 @@ researchers:
 cves:
 - CVE-2021-44228
 product: Apache log4j
-versions: 2.0 <= Apache log4j2 <= 2.14.1
+versions: 2.0 <= Apache and log4j2 <= 2.14.1
 recommendation: "
 Install the latest version of log4j version 2.15.0-rc2 "
 patch_status:	 	Full patched
@@ -27,7 +27,7 @@ Apache reported a remote code execution vulnerability in Apache Log4j2, the vuln
 
 ## What you can do
 
-If you run Apache with version less then 2.0 or Apache or log4j2 less then 2.14.1 upgrade to version 2.15.0-rc2 as soon as possible.
+If you run Apache with version less then 2.0 or Apache and/or log4j2 less then 2.14.1 upgrade to version 2.15.0-rc2 as soon as possible.
 
 ## What we are doing
 
