--- a/csirt.divd.nl/_cases/DIVD-2021-00038.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00038.md
@@ -4,12 +4,16 @@ title: DIVD-2021-00038 - Apache Log4j2
 divd: DIVD-2021-00038
 short: Apache Log4j2 - CVE-2021-44228.
 author: Victor Pasman
-lead: Victor Pasman
+lead: Victor Gevers
 redirect_from:
   - /DIVD-2021-00038/
 status : Open
 excerpt: We will be scanning for CVE-2021-44228
 researchers:
+- Victor Gevers
+- Lennaert Oudshoorn
+- Wietse Boonstra 
+- Matthijs Koot
 - Victor Pasman
 - Ralph Horn
 cves:
