--- a/csirt.divd.nl/_cases/DIVD-2021-00038.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00038.md
@@ -11,11 +11,14 @@ status : Open
 excerpt: We will be scanning for CVE-2021-44228
 researchers:
 - Victor Gevers
-- Lennaert Oudshoorn
+- Victor Pasman
 - Wietse Boonstra 
 - Matthijs Koot
-- Victor Pasman
+- Lennaert Oudshoorn
 - Ralph Horn
+- Célistine Oosting
+- Ruben Uithol
+- Remco Verhoef
 cves:
 - CVE-2021-44228
 product: Apache log4j
