--- a/csirt.divd.nl/_cases/DIVD-2021-00038.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00038.md
@@ -30,7 +30,7 @@ patch_status:	 	Full patched
 ---
 ## Summary
 
-Apache reported a remote code execution vulnerability in Apache Log4j2, the vulnerability in the Log framework of appache makes it possible to misuse the record log information feature. This makes it possible for an attacker to construct special data request packets through this vulnerable component, and ultimately trigger remote code execution.
+Apache reported a remote code execution vulnerability in Apache Log4j2, the vulnerability in the Log framework of Apache makes it possible to misuse the record log information feature. This makes it possible for an attacker to construct special data request packets through this vulnerable component, and ultimately trigger remote code execution.
 
 ## What you can do
 
