--- a/csirt.divd.nl/_cases/DIVD-2021-00038.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00038.md
@@ -44,13 +44,13 @@ We are scanning the internet for vulnerable servers, and will notify system owne
 
 | Date | Description |
 |:-----:|-------------|
-| 09-12-2021 | Lunasec reported about the vulnerability |
+| 09-12-2021 | Lunasec reported about the vulnerability. |
 | 09-12-2021 | Proof of Concept code becomes publicly available. |
 | 10-12-2021 | DIVD starts scanning the internet for CVE-2021-44228. |
-| 12-12-2021 | DIVD sent out a first batch of notifications |
-| 13-12-2021 | DIVD and [DTACT](https://dtact.com/) published a open-source local scanning tool, its on [Github](https://github.com/dtact/divd-2021-00038--log4j-scanner) |
-| 17-12-2021 | DIVD sent out a second batch of notifications |
-| 19-12-2021 | DIVD sent out a third batch of notifications |
+| 12-12-2021 | DIVD sent out a first batch of notifications. |
+| 13-12-2021 | DIVD and [DTACT](https://dtact.com/) published a open-source local scanning tool, its on [Github](https://github.com/dtact/divd-2021-00038--log4j-scanner). |
+| 17-12-2021 | DIVD sent out a second batch of notifications. |
+| 19-12-2021 | DIVD sent out a third batch of notifications. |
 
 ## More information
 * [Lunasec Advisory](https://www.lunasec.io/docs/blog/log4j-zero-day/)
