--- a/csirt.divd.nl/_cases/DIVD-2021-00039.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00039.md
@@ -28,11 +28,10 @@ The rootkit name, iLOBleed, is based on the malware module Implant.ARM.iLOBleed.
 The attackers discreetly prevented firmware updates by simulating a fake upgrade process on the web UI. The attackers failed to use the latest UI image.
 
 ### What iLO Versions and Servers are at Risk?
-iLO4 and earlier versions used on HP ProLiant servers.
 
-The latest iLO version can be downgraded and therefore are vulnerable too.
-
-The latest G10 series must have non-default setting (firmware downgrade prevention), otherwise it is possible to downgrade the firmware. The firmware downgrade prevention mechanism is not available for servers prior to G10.
+* iLO4 and earlier versions used on HP ProLiant servers.
+* The latest iLO version can be downgraded and therefore are vulnerable too.
+* The latest G10 series must have non-default setting (firmware downgrade prevention), otherwise it is possible to downgrade the firmware. The firmware downgrade prevention mechanism is not available for servers prior to G10.
 
 ## What you can do
 
@@ -40,7 +39,7 @@ The latest G10 series must have non-default setting (firmware downgrade preventi
 * Periodically update the iLO firmware version to the latest official release from HP.
 * Perform iLO security settings on HP servers, and disable downgrade for G10 servers.
 Use defense-in-depth strategies to reduce risk and detect intrusions before reaching the iLO.
-* Multiple security firms are working on a iLO Scanner tool for periodically scan to detect potential vulnerabilities, malware ans backdoors in the current version of the iLO firmware.
+* Multiple security firms are working on a iLO Scanner tool for periodically scan to detect potential vulnerabilities, malware and backdoors in the current version of the iLO firmware.
 
 ## What we are doing
 
@@ -58,3 +57,4 @@ We are scanning the internet for vulnerable servers, and will notify system owne
 
 ## More information
 * [Padvish Threats Database](https://threats.amnpardaz.com/en/2021/12/28/implant-arm-ilobleed-a/)
+* [NCSC Advisories](https://advisories.ncsc.nl/advisory?id=NCSC-2022-0006)
