--- a/csirt.divd.nl/_cases/DIVD-2021-00039.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00039.md
@@ -53,6 +53,7 @@ We are scanning the internet for vulnerable servers, and will notify system owne
 | 31-12-2021 | DIVD starts OSINT research. |
 | 01-01-2022 | DIVD starts scanning the internet for open iLO instances. |
 | 02-01-2022 | DIVD starts with identifying owners. |
+| 07-01-2022 | DIVD sent out a first batch of notifications. |
 
 
 ## More information
