Basic Mermaid that doesn;t work

--- a/csirt.divd.nl/_cases/DIVD-2021-00038.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00038.md
@@ -52,6 +52,14 @@ We are scanning the internet for vulnerable servers, and will notify system owne
 | 17-12-2021 | DIVD sent out a second batch of notifications. |
 | 19-12-2021 | DIVD sent out a third batch of notifications. |
 
+<div class="mermaid">
+graph TD;
+A-->B;
+A-->C;
+B-->D;
+C-->D;
+</div>
+
 ## More information
 * [Lunasec Advisory](https://www.lunasec.io/docs/blog/log4j-zero-day/)
 * [DIVD article](https://csirt.divd.nl/2021/12/14/Update-Apache-log4j-remote-code-execution/)
