First Mermaid attempt

--- a/csirt.divd.nl/_cases/DIVD-2021-00038.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00038.md
@@ -27,6 +27,31 @@ recommendation: "
 Install the latest version of log4j version 2.17.1"
 patch_status:	 	Full patched
 -workaround:		n/a
+start: 2021-12-09
+end:
+timeline:
+- start: 2021-12-09
+  end:
+  event: "Lunasec reported about the vulnerability."
+- start: 2021-12-09
+  end:
+  event: "Proof of Concept code becomes publicly available."
+- start: 2021-12-10
+  end: 
+  event: "DIVD starts scanning the internet for CVE-2021-44228."
+- start: 2021-12-12
+  end:
+  event: "DIVD sent out a first batch of notifications."
+- start: 2021-12-13
+  end:
+  event: "DIVD and [DTACT](https://dtact.com/) published a open-source local scanning tool, its on [Github](https://github.com/dtact/divd-2021-00038--log4j-scanner)."
+- start: 2021-12-17
+  end:
+  event: "DIVD sent out a second batch of notifications."
+- start: 2021-12-19
+  end:
+  event: "DIVD sent out a third batch of notifications."
+
 ---
 ## Summary
 
@@ -40,25 +65,10 @@ If you run Apache with version less then 2.0 or Apache and/or log4j2 less then 2
 
 We are scanning the internet for vulnerable servers, and will notify system owners via the listed abuse contacts.
 
-## Timeline
+{% include timeline_table.html %}
 
-| Date | Description |
-|:-----:|-------------|
-| 09-12-2021 | Lunasec reported about the vulnerability. |
-| 09-12-2021 | Proof of Concept code becomes publicly available. |
-| 10-12-2021 | DIVD starts scanning the internet for CVE-2021-44228. |
-| 12-12-2021 | DIVD sent out a first batch of notifications. |
-| 13-12-2021 | DIVD and [DTACT](https://dtact.com/) published a open-source local scanning tool, its on [Github](https://github.com/dtact/divd-2021-00038--log4j-scanner). |
-| 17-12-2021 | DIVD sent out a second batch of notifications. |
-| 19-12-2021 | DIVD sent out a third batch of notifications. |
+{% include timeline_gantt.html %}
 
-<div class="mermaid">
-graph TD;
-A-->B;
-A-->C;
-B-->D;
-C-->D;
-</div>
 
 ## More information
 * [Lunasec Advisory](https://www.lunasec.io/docs/blog/log4j-zero-day/)
